# HVAC_Canvas_App

./: .auto-claude-status  .dockerignore  .gitignore  AGENTS.md  AI_MODEL_RESTRICTION_SUMMARY.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CODEBASE.md  CONTRIBUTING.md  CRITICAL_FIXES_STATUS.md  E2E_HEALTH_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSPECTOR_PANEL_IMPLEMENTATION.md  Improved Canvas.pen  Improved Dashboard and Canvas  InspectorPanel.jsx  LICENSE  PLAN-Unification_Ticket.md  PLAN-agent-hiring-sequencing.md  PLAN-auto-fitting-override-locks.md  PLAN-calculation-hydration.md  PLAN-canvas-bom-sidebar.md  PLAN-canvas-calculations-presentable.md  PLAN-codex-subagent-orchestration-skill.md  PLAN-design-system-gap.md  PLAN-disk-space-fix.md  PLAN-duct-rendering-run-segment-overhaul.md  PLAN-elements-workflows.md  PLAN-epic-specs-execution-roadmap.md  PLAN-persistent-storage-root.md  PLAN-project-state-orchestrator.md  PLAN-traycer-library-execution.md  PLAN-unified-engineering-core.md  PLAN-version-investigation.md  PLAN-vibe-kanban-web-companion.md  PR_INSTRUCTIONS.md  README.md  ROOT_CAUSE_ANALYSIS.md  SECURITY.md  (+41 more)
.agent/: ARCHITECTURE.md
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.sisyphus/: boulder.json  ralph-loop.local.md
.sonarlint/: connectedMode.json
.tmp/: typecheck-683c757.txt
.trunk/: trunk.yaml
.walkthroughs/: TauriStorageAdapter-Implementation.md
.zenflow/: settings.json
docs/: ARCHITECTURE.md  CI_CD.md  Dashboard_Improvement.md  FAQ.md  GLOSSARY.md  INDEX.md  PHASE_EXECUTION_GUIDE.md  PRD.md  QUICK_START.md  README.md  RELEASE_PROCESS.md  STATUS.md  TESTING.md  TROUBLESHOOTING.md  UserJourney.md  _HVAC_App_Architecture_Specification_Review__2025-12-06T19-39-19.md  _HVAC_App_Architecture_Specification_Review__2025-12-13T12-56-51.md  right_sidebar_redesign_v2.html  task-status-phase6-8.md
hvac-design-app/: .dockerignore  .env.example  .env.local.example  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  BUILD_RESTORATION_REPORT.md  DESIGN_SYSTEM.md  Dockerfile  ENVIRONMENT.md  MANUAL_TEST_GUIDE.md  PLAN-first-launch-modal.md  QUICK_TEST.md  README.md  TESTING_EXPECTATIONS.md  TRUNK_SETUP.md  chromatic-diagnostics.json  chromatic.config.json  debug.ts  debug_log.txt  (+84 more)
hvac-design-app/src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
hvac-design-app/src-tauri/capabilities/: default.json
hvac-design-app/src-tauri/src/: lib.rs  main.rs  oauth.rs
hvac-design-app/src-tauri/src/commands/: mod.rs  storage_root.rs
(+1728 files in other folders)
