[package]
name = "sizewise-hvac-canvas"
version = "0.1.0"
description = "SizeWise HVAC Canvas - Professional HVAC design and estimation desktop application"
authors = ["John Rey Razonable"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sizewise_hvac_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "2", features = [ "window-close", "window-maximize", "window-hide", "window-unminimize", "window-minimize", "window-unmaximize", "window-start-dragging", "window-show", "dialog-all", "fs-all", "path-all"] }
tauri-plugin-store = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
url = "2.5"
urlencoding = "2.1"
open = "5.0"
base64 = "0.22"

