[package]
name = "sizewise-hvac-canvas"
version = "0.1.0"
description = "SizeWise HVAC Canvas - Professional HVAC design and estimation desktop application"
authors = ["John Rey Razonable"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sizewise_hvac_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "2", features = [ "window-close", "window-maximize", "window-hide", "window-unminimize", "window-minimize", "window-unmaximize", "window-start-dragging", "window-show", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

