[package]
name = "sizewise-hvac-canvas"
version = "0.1.0"
description = "SizeWise HVAC Canvas"
authors = ["John Rey Razonable"]
edition = "2021"

[lib]
name = "sizewise_hvac_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
fs2 = "0.4"

